# DualAnalysisPlugin

./: CMakeLists.txt  PluginInfo.json  conanfile.py
.github/workflows/: build.yml
src/: DualAnalysisPlugin.cpp  DualAnalysisPlugin.h  DualAnalysisPlugin.json
src/Actions/: SettingsAction.cpp  SettingsAction.h
src/Common/: TsneAnalysis.cpp  TsneAnalysis.h
src/HSNE/: HsneHierarchy.cpp  HsneHierarchy.h  HsneScaleAction.cpp  HsneScaleAction.h  HsneSettingsAction.cpp  HsneSettingsAction.h
src/tSNE/: GeneralTsneSettingsAction.cpp  GeneralTsneSettingsAction.h  InitTsneSettings.cpp  TsneSettingsAction.cpp
